# seleniumbase-rs

./: .dockerignore  .gitignore  Cargo.toml  DOCS.md  Dockerfile  README.md  book.toml  port_config.py  port_js.py  port_js2.py  port_js_regex.py  port_translate.py
.github/workflows/: ci.yml  docker.yml
docs/: DEVELOPER_GUIDE.md  README.md  SUMMARY.md  performance.md  python-migration.md  reliability.md  rust-test-tooling.md  security.md  why-rust.md
docs/help/: commander.md  customizing_test_runs.md  docker.md  html_inspector.md  playwright_mode.md  recorder_cli.md  syntax_formats.md
docs/tutorials/: api_reference.md  behave.md  cdp_mode.md  charts.md  cli_usage.md  cloud_integrations.md  getting_started.md  gui_automation.md  masterqa.md  mfa_totp.md  pdf_parsing.md  recorder_mode.md  remaining_helpers.md  selectors.md  selenium_ide.md  settings_and_config.md  shadow_dom.md  tours.md  translations.md  uc_mode.md  waits_assertions.md
examples/: basic_test.rs  behave_feature.rs  browser_test_runner.rs  cdp_mode.rs  chart_maker.rs  cloud_upload.rs  cookies_storage.rs  dialog.rs  dialogs.rs  gui_automation.rs  html_inspector.rs  js_execution.rs  masterqa.rs  network_conditions.rs  pdf_example.rs  playwright_mode.rs  raw_google.rs  recorder_test.rs  remaining_helpers.rs  screenshots.rs  selectors.rs  selenium_ide.rs  settings_config.rs  shadow_dom.rs  stealth_options.rs  totp_login.rs  tour_maker.rs  uc_mode_test.rs  uc_stealth.rs  waits_assertions.rs
help_docs/: customizing_test_runs.md  syntax_formats.md  uc_mode.md
integrations/: github_actions.yml
src/: artifacts.rs  cdp.rs  config.rs  dashboard.rs  error.rs  lib.rs  packages.rs  patcher.rs  recorder.rs  scenario.rs  uc.rs
src/api/: base_case.rs  base_case_impl_dialog_inspector.rs  base_case_impl_gui.rs  base_case_impl_remaining.rs  base_case_impl_remaining_browser.rs  base_case_impl_remaining_charts.rs  base_case_impl_remaining_jslibs.rs  base_case_impl_remaining_links.rs  base_case_impl_remaining_media.rs  base_case_impl_remaining_nav.rs  base_case_impl_remaining_presentations.rs  base_case_impl_remaining_tours.rs  cdp_driver.rs  cdp_page.rs  chart.rs  deferred.rs  dialog.rs  gui.rs  html.rs  html_inspector.rs  master_qa.rs  mod.rs  pdf.rs  playwright.rs  presentation.rs  recorder.rs  runner.rs  scenario.rs  tour.rs  traits.rs
src/behave/: async_steps.rs  behave_helper.rs  behave_runner.rs  behave_sb.rs  common_steps.rs  helper.rs  mod.rs  runner.rs  steps.rs
src/browser/: config.rs  downloader.rs  launcher.rs  mod.rs  playwright.rs  session.rs  settings.rs
src/common/: decorators.rs  encryption.rs  exceptions.rs  mod.rs  obfuscate.rs  unobfuscate.rs
tests/: artifacts_tests.rs  config_tests.rs  patcher_tests.rs  recorder_tests.rs  scenario_tests.rs  uc_test.rs
(+158 files in other folders)
