[package]
name = "seleniumbase-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust port foundation of SeleniumBase with module parity and core browser automation."
repository = "https://github.com/MustCodeAl/SeleniumBase"

[lib]
name = "seleniumbase_rs"
path = "src/lib.rs"

[[bin]]
name = "sbase"
path = "src/bin/sbase.rs"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
thirtyfour = "0.35.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "time"] }
regex = "1.10.4"
rand = "0.8.5"

[dev-dependencies]
tempfile = "3.27.0"
